app/styles/small.scss
@import "variables";

@media screen and (max-width: 1024px) {
  #home {
    #pf-intro-container {
      width: 100%;

      blockquote {
        padding: 150px 40px 40px;
        text-align: center;
      }
    }

    #pf-logo {
      margin-top: 20px;
      width: 20%;
      min-width: 150px;
    }
  }

  #pf-nav, #pf-logo-content {
    display: none;
  }

  #contents {
    #pf-nav-content {
      left: initial;
      right: 0px;
      width: 50px;
      padding-left: 5px;
      background-color: rgba(255, 255, 255, 0.5);
    }

    .pf-content-container {
      padding: 50px 75px 50px 25px;
    }

    .nav-vertical ul li a {
      line-height: 40px;
      background-size: 40px 40px;
    }

    section {
      margin-left: 0px;
      margin-right: 0px;

      #home {
        box-shadow: none;
      }
    }
  }
}

